--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
@@ -17,8 +17,8 @@
 
     <div class="navigation">
         <div class="topnav" id="myTopnav">
+            <a class="resum" onclick="scrollit('resume')">Home</a>
             <a class="aboutme" onclick="scrollit('aboutme')">About Me</a>
-            <a class="resum" onclick="scrollit('resume')">Resume</a>
             <a class="skill" onclick="scrollit('skill')">Skills</a>
             <a class="portfolio" onclick="scrollit('portfolio')">Portfolio</a>
             <a class="contact" onclick="scrollit('contact')">Contact</a>
@@ -40,7 +40,7 @@
                 <span>Hello I'm</span>
             </div> -->
             <p class="txt2">Akaki Koridze</p>
-            <p class="txt1">Full Stack Developer from NYC </p> 
+            <p class="txt1">Full Stack Developer Living in NYC </p> 
             <!-- <p>Experienced in React, Javascript and Ruby.</p> -->
             
         </div>
@@ -51,70 +51,91 @@
     </section>
 
     <section id="aboutme" class="skills">
-        <hr>
         <div class="skilltext">
             ABOUT ME
             <hr>
         </div>
         <div>
-            <!-- <section class="module" id="profile">
+            <section id="about" class="about-mf sect-pt4 route">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-12">
-                            <div class="m-title c-align">
-                                <h2>Daniel Raleway</h2>
-                                <h6>Visual Designer & Front-end Developer</h6>
+                        <div class="col-sm-12">
+                            <div class="box-shadow-full">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="row">
+                                            <div class="col-sm-6 col-md-5">
+                                                <div class="about-img">
+                                                    <img src="file:///Users/akakikoridze/Desktop/Port/Akaki91.github.io/images/img.jpg"
+                                                        class="img-fluid rounded b-shadow-a" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6 col-md-7">
+                                                <div class="about-info">
+                                                    <p><span class="title-s">Name: </span> <span>Morgan Freeman</span></p>
+                                                    <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
+                                                    <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
+                                                    <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-mf">
+                                            <p class="title-s">Skill</p>
+                                            <span>HTML</span> <span class="pull-right">85%</span>
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85"
+                                                    aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>
+                                            <span>CSS3</span> <span class="pull-right">75%</span>
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
+                                                    aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>
+                                            <span>PHP</span> <span class="pull-right">50%</span>
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50"
+                                                    aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>
+                                            <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90"
+                                                    aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="about-me pt-4 pt-md-0">
+                                            <div class="title-box-2">
+                                                <h5 class="title-left">
+                                                    About me
+                                                </h5>
+                                            </div>
+                                            <p class="lead">
+                                                Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu
+                                                erat, accumsan id
+                                                imperdiet et, porttitor
+                                                at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
+                                                porttitor accumsan tincidunt.
+                                            </p>
+                                            <p class="lead">
+                                                Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor
+                                                eget felis
+                                                porttitor volutpat. Vestibulum
+                                                ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                                            </p>
+                                            <p class="lead">
+                                                Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in,
+                                                elementum id enim.
+                                                Nulla porttitor accumsan
+                                                tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <p><img src="assets/images/im.jpg" alt=""></p>
-                        </div>
-                        <div class="col-md-4">
-                            <h5>Profesional Profile</h5>
-                            <p>Map where your photos were taken and discover local points of interest. Map where your photos. Map
-                                where your photos were taken and discover local points of interest. Map where your photos.</p>
-                            <p>Map where your photos were taken and discover local points of interest. Map where your photos. Map
-                                where your photos were taken and discover local points of interest. Map where your photos.</p>
-                        </div>
-                        <div class="col-md-4">
-                            <h5>My Skills</h5>
-                            <div class="progress-item">
-                                <div class="progress-title">Gulp</div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-brand" aria-valuenow="60" role="progressbar"
-                                        aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span
-                                                class="pb-number"></span>%</span></div>
-                                </div>
-                            </div>
-                            <div class="progress-item">
-                                <div class="progress-title">UX Design</div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-brand" aria-valuenow="80" role="progressbar"
-                                        aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span
-                                                class="pb-number"></span>%</span></div>
-                                </div>
-                            </div>
-                            <div class="progress-item">
-                                <div class="progress-title">HTML / CSS3 / SASS</div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-brand" aria-valuenow="50" role="progressbar"
-                                        aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span
-                                                class="pb-number"></span>%</span></div>
-                                </div>
-                            </div>
-                            <div class="progress-item">
-                                <div class="progress-title">Gulp</div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-brand" aria-valuenow="60" role="progressbar"
-                                        aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span
-                                                class="pb-number"></span>90%</span></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
+                </div>
             </section>
     
         </div>
@@ -166,7 +187,7 @@
 
     <script src="https://kit.fontawesome.com/671cd2f222.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -174,6 +195,6 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script> -->
+        crossorigin="anonymous"></script>
 </body>
 </html>
