--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     I am open for new opportunities and would like to hear from you.
                   </p>
                   <p class="lead">
-                    I have graduated from App Academy bootcamp located in NYC recently and took intensive training courses
+                    I have graduated from App Academy Bootcamp Prep program in NYC recently and took intensive training courses
                     in web development in GeoLab educational center during 4 months. Meanwhile I have been interning
                     for their project mainly working in jQuery and front end.
                   </p>
