--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer,Experienced in MERN Stack,Living in NYC</span><strong class="text-slider"></strong></p>
           <div class="getcontact">
               Connect:
-              <a href=""><i class="fab fa-linkedin"></i></a>
-              <a href=""><i class="fab fa-github-square"></i></a>
+              <a href="https://www.linkedin.com/in/akaki-koridze-39331880/"><i class="fab fa-linkedin"></i></a>
+              <a href="https://github.com/Akaki91"><i class="fab fa-github-square"></i></a>
               <a href=""><i class="fab fa-twitter-square"></i></a>
           </div>
           <a href="img/Akaki Koridze - Resume.pdf" target="_blank" class="resume" onclick="but()">
